2005-08-25  Nathaniel Smith  <njs@pobox.com>

	* paths.cc (file_path): Fix up error reporting in external path
	normalization.
	(test_file_path_external_no_prefix): "" is always an invalid
	path.

2005-08-25  Nathaniel Smith  <njs@pobox.com>

	* database.cc (sql): Only check schema version when db actually
	exists.

2005-08-25  Nathaniel Smith  <njs@pobox.com>

	* file_io.cc (read_data_for_command_line): We are given a
	system_path.

2005-08-25  Nathaniel Smith  <njs@pobox.com>

	* paths.cc: Fix all unit test failures, except for two mysterious
	boost::too_few_args exceptions.
	
2005-08-25  Nathaniel Smith  <njs@pobox.com>

	* paths.cc, unix/fs.cc: Many, many fixes and some new tests too.	

2005-08-25  Nathaniel Smith  <njs@pobox.com>

	* paths.cc (struct access_tracker): Doh, initializer should set
	'initialized'...
	(test_file_path_internal): It's valid for a split file
	to have a null component if the file is "".

2005-08-25  Nathaniel Smith  <njs@pobox.com>

	* paths.cc (in_bookkeeping_dir): Last change didn't work out so
	well; let's remove some negatives and see if I can understand what
	the code does this way...

2005-08-25  Nathaniel Smith  <njs@pobox.com>

	* paths.cc (not_in_bookkeeping_dir): Handle "MT" case.
	Update tests to make sure it sticks...

2005-08-25  Nathaniel Smith  <njs@pobox.com>

	* unit_tests.{cc,hh} (init_unit_test_suite): Remove
	path_component_tests.
	* unix/fs.cc (tilde_expand): Another compile fix.

2005-08-25  Nathaniel Smith  <njs@pobox.com>

	* {unix,win32}/fs.cc: Misc. compile fixes.

2005-08-25  Nathaniel Smith  <njs@pobox.com>

	* Makefile.am (UNIX_PLATFORM_SOURCES): Add unix/fs.cc
	(WIN32_PLATFORM_SOURCES): Add win32/fs.cc
	* paths.hh (bookkeeping_path): Implement default constructor.

2005-08-25  Nathaniel Smith  <njs@pobox.com>

	* rcs_import.cc (import_cvs_repo): 
	* lua.cc (default_rcfilename): 
	* diff_patch.cc (get_version): Small compile fixes.

2005-08-25  Nathaniel Smith  <njs@pobox.com>
