@@ -1,5 +1,10 @@
 2005-08-25  Nathaniel Smith  <njs@pobox.com>
 
+	* paths.cc: Many small changes.  Unit tests now pass.  72
+	unexpected autotest failures.
+
+2005-08-25  Nathaniel Smith  <njs@pobox.com>
+
 	* paths.cc (file_path): Fix up error reporting in external path
 	normalization.
 	(test_file_path_external_no_prefix): "" is always an invalid
